--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="about" style="display:none;">
     <p><span class="big">Mikki Janower is a graphic designer and art director based in Brooklyn.</span> Her work reflects her multidisciplinary background, robust visual research, and acute typophilia. She loves freelance projects and collaborations, particularly work skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
-    <img src="/assets/headshot.jpg">    
+    <img src="assets/headshot.jpg">    
 </section>
 
     <section id="index">
