--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a class="flip about">About</a>
     <a class="flip index">Index</a>
     </section>
-
+    <!--<div class="querytown"></div>-->
     <section id="about" style="display:none;">
     <p><span class="big">Mikki Janower is a graphic designer and art director based in Brooklyn.</span> Her work reflects her multidisciplinary background, robust visual research, and acute typophilia. She loves freelance projects and collaborations, particularly work skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
     <img src="assets/headshot.jpg">    
@@ -65,15 +65,15 @@
         <div id="label"><span class="labelita">Nike: Discover Your Air</span><span class="labelreg">2017</span></div>
     </div>
 </section>
-    
-    <section class="bottom sticky">
+
+<section class="bottom sticky">
     <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
     <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     <a class="flip" href="assets/Mikki_Janower_Resume.pdf" target="_blank">Resume</a>
     <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
     <a class="flip" href="https://linkedin.com/in/mtjanower" target="_blank">LinkedIn</a>
     </section>
-    
+
     <script src="assets/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="js/gallery.js"></script>
