--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 
     <link rel="stylesheet" href="css/style.css">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
+
 </head>
 <body>
     <section class="top sticky">
-    <a class="name">Mikki Janower<span class="dot">dot</span>Work</a>
+    <a class="name">Mikki Janower <span class="dot">dot</span> Work</a>
     <a class="flip about">About</a>
     <a class="flip index">Index</a>
     </section>
-    <div class="querytown"></div>
+   <!-- <div class="querytown"></div>-->
     <section id="about" style="display:none;">
-    <p><span class="big">Mikki Janower is a graphic designer and art director based in Brooklyn.</span> Her work reflects her multidisciplinary background, robust visual research, and acute typophilia. She loves freelance projects and collaborations, particularly work skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
+   <!-- <div class="big">Mikki Janower <span class="bigsmall">is a</span> graphic designer<span class="bigsmall"> and </span>art director<span class="bigsmall"> based in</span> Brooklyn.</div>--> 
+    <p>Mikki Janower is a graphic designer and art director based in Brooklyn. Her work reflects her multidisciplinary background, robust visual research, and acute typophilia. She loves freelance projects and collaborations, particularly work skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
     <img src="assets/headshot.jpg">    
 </section>
 
@@ -33,7 +36,7 @@
 <section id="homepage"style="display:none">
         <div class="pic cyberotica">
             <img src="cyberotica/factoryofthesun2.jpg">
-             <div id="label"><span class="labelita">Cyberotica: Technology and Fetish in Contemporary Art</span><span class="		 			labelreg">2020</span></div>
+             <div id="label"><span class="labelita">Cyberotica</span><span class="		 			labelreg">2020</span></div>
        </div>
         
       <div class="pic postcursor">
@@ -75,6 +78,7 @@
     </section>
 
     <script src="assets/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="js/gallery.js"></script>
     <script src="js/pageturn.js"></script>
