crazy draggable homepage

--- a/postcursor.html
+++ b/postcursor.html
@@ -17,7 +17,7 @@
     <section class="top sticky">
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">Postcursor</a>
+    <a class="projectTitle">Postcursor / Starrynite</a>
     <a class="flip index">Index</a>
     </section>
 
@@ -54,7 +54,7 @@
         </div>
         </section>
 
-        <script type="text/javascript">const title= "Postcursor";</script>
+        <script type="text/javascript">const title= "Postcursor / Starrynite";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section id="about" style="display:none;">
