--- a/project-index.html
+++ b/project-index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/index.css">
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+
 </head>
 <body>
     <section class="top sticky">
@@ -22,13 +24,112 @@
     <a href="index.html" class="flip finishedindex">Back</a>
     </section>
 
-   <!--- <div class="querytown"></div>-->
+    <div class="querytown"></div>
 <!--------------------------insert page-specific information in this section ONLY----------------------->
 <section id="projectindex">
-<div class="listing"></div>
-<div class="listing"></div>
-<div class="listing"></div>
+<div class="listing">
+    <div class="title">Cyberotica</div>
+    <div class="description">An contemporary art anthology</div>
+    <div class="year">2020</div>
+    <div class="thumbnails"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/abstract2.jpg"><img src="cyberotica/contents2.jpg"></div>
+    <div class="extender" style="display:none;"></div>
+</div>
+
+<div class="listing">
+    <div class="title">Postcursor / Starrynite</div>
+    <div class="description">Machine learning as conditional design</div>
+    <div class="year">2020</div>
+    <div class="thumbnails"><img src="postcursor/postcursor-02.png"><img src="postcursor/starrynite-04.png"></div>
+</div>
+<div class="listing">
+    <div class="title">Brett Castro: a/B Parts I-V</div>
+    <div class="description">An album art series</div>
+    <div class="year">2020-ongoing</div>
+    <div class="thumbnails"><img src="miniprojects/aB/p1.jpg"><img src="miniprojects/aB/p2.jpg"></div>
+</div>
+<div class="listing">
+    <div class="title">Cocktails of the Major Arcana</div>
+    <div class="description">Mixology for pagans</div>
+    <div class="year">2020</div>
+    <div class="thumbnails"><img src="majorarcana/IMG_2527-copy.jpg"><img src="majorarcana/IMG_2446-copy.jpg"></div>
+</div>
+<div class="listing">
+    <div class="title">Reflections on Practice</div>
+    <div class="description">Not a process book</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6800-copy.jpg"><img src="reflections/IMG_6772.jpg"></div>
+</div>
+<div class="listing">
+    <div class="title">The Spirit Molecule</div>
+    <div class="description">A microsite about psychedelics</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"><img src="spiritmolecule/spirit-molecule-01.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
+</div>
+<div class="listing">
+    <div class="title">Reconna Typeface</div>
+    <div class="description">A typeface inspired by 19th-century print</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"><img src="reconna/IMG_1234-2.jpg"><img src="reconna/reconna screenie.png"></div>
+</div>
+<div class="listing">
+    <div class="title">Found Soundscapes</div>
+    <div class="description">Phonetic poetry from the streets of Florence</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"><img src="soundscapes/IMG_1099.jpg"><img src="soundscapes/IMG_1090.jpg"></div>
+</div>
+<div class="listing">
+    <div class="title">Nike: Discover Your Air</div>
+    <div class="description">A '90s-infused ad campaign</div>
+    <div class="year">2018</div>
+    <div class="thumbnails"><img src="discoveryourair/Product-Shot.jpg"><img src="discoveryourair/Bumper-Sticker.jpg"><img src="discoveryourair/Foot-Locker---Cab.jpg"></div>
+</div>
+<div class="listing">
+    <div class="title">Save Local Booksellers</div>
+    <div class="description">On supporting independent bookstores</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"><img src="miniprojects/booksellers/poster.png"></div>
+</div>
+<div class="listing">
+    <div class="title">Super Mario Void</div>
+    <div class="description">A video game for nihilists</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"><img src="miniprojects/mariovoid/thumbnail.png"></div>
+</div>
+<div class="listing">
+    <div class="title">Everpress: T-shirt series</div>
+    <div class="description">An ongoing quest for sartorial excellence</div>
+    <div class="year">2020—ongoing</div>
+    <div class="thumbnails"><img src="miniprojects/everpress/powerstee.png"><img src="miniprojects/everpress/stemtee.png"><img src="miniprojects/everpress/voidtee.png"></div>
+</div>
+<div class="listing">
+    <div class="title">Tenets for Anarchic Design</div>
+    <div class="description">Instructions for radical practice</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"><img src="miniprojects/anarchic/poster.jpg"></div>
+</div>
+<div class="listing">
+    <div class="title">Mikki is Addicted to Magazines</div>
+    <div class="description">A microsite about...you know.</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"><img src="miniprojects/miatm/miatm-01.png"><img src="miniprojects/miatm/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
+</div>
+<!--<div class="listing">
+    <div class="title">Armour Magazine</div>
+    <div class="description">Creative direction, etc.</div>
+    <div class="year">2016-2020</div>
+    <div class="thumbnails"><img src="miniprojects/miatm/miatm-01.png"><img src="miniprojects/miatm/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
+</div>
+<div class="listing">
+    <div class="title">Gold and Granary</div>
+    <div class="description">Branding for an independent print fair</div>
+    <div class="year">2019</div>
+    <div class="thumbnails"></div>
+</div>-->
+<div class="more">
+   Looking for something? More projects available upon request — email <a href = "mailto:mikki@janower.net">mikki@janower.net</a> :) 
+</div>
 </section>  
+
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section id="about" style="display:none;">
     <p><span class="big">Mikki Janower is a graphic designer and art director based in Brooklyn.</span> Her work reflects her multidisciplinary background, robust visual research, and acute typophilia. She loves freelance projects and collaborations, particularly work skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
@@ -45,7 +146,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/gallery.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/pageturn.js"></script>
     <script src="js/projects.js"></script>
 
