fixed lag on drag (hehe a rhyme), worked on index page

--- a/project-index.html
+++ b/project-index.html
@@ -29,17 +29,24 @@
 <section id="projectindex">
 <div class="listing">
     <div class="title">Cyberotica</div>
-    <div class="description">An contemporary art anthology</div>
+    <div class="description">An anthology of contemporary art</div>
     <div class="year">2020</div>
-    <div class="thumbnails"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/abstract2.jpg"><img src="cyberotica/contents2.jpg"></div>
-    <div class="extender" style="display:none;"></div>
+    <div class="thumbnails"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"><img src="cyberotica/contents2.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
+        <br> <br>Spanning gender politics, de-colonization, and techno-utopianism, Cyberotica presents a vast narrative of identity and protest.</div>
+        <div class="images"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"></div>
+    </div>
 </div>
 
 <div class="listing">
     <div class="title">Postcursor / Starrynite</div>
     <div class="description">Machine learning as conditional design</div>
     <div class="year">2020</div>
-    <div class="thumbnails"><img src="postcursor/postcursor-02.png"><img src="postcursor/starrynite-04.png"></div>
+    <div class="thumbnails"><img src="postcursor/postcursor-02.png"><img src="postcursor/postcursor-04.png"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Postcursor</i> and <i>Starrynite</i> are microsites trained to generate graphics according to users’ hand movements, exploring the notion of process-as-product.
+        <br><br>Each site uses the same machine learning model to its own end. Postcursor lets users draw cursors across the screen, while Starrynite leaves a trail of stars across the user's backdrop.</div>
+        <div class="images"><img src="postcursor/postcursor-02.png"><img src="postcursor/postcursor-04.png"></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Brett Castro: a/B Parts I-V</div>
@@ -52,36 +59,60 @@
     <div class="description">Mixology for pagans</div>
     <div class="year">2020</div>
     <div class="thumbnails"><img src="majorarcana/IMG_2527-copy.jpg"><img src="majorarcana/IMG_2446-copy.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Cocktails of the Major Arcana</i> is a collection of cocktail recipes inspired by the art of tarot.
+        <br><br>Each hand-drawn illustration represents one character in the tarot pantheon. On the backside of each card, a curated cocktail represents the corresponding character.</div>
+        <div class="images"><img src="majorarcana/IMG_2527-copy.jpg"><img src="majorarcana/IMG_2446-copy.jpg"></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Reflections on Practice</div>
     <div class="description">Not a process book</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6800-copy.jpg"><img src="reflections/IMG_6772.jpg"></div>
+    <div class="thumbnails"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6714-copy.jpg"><img src="reflections/IMG_6772.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Reflections on Practice</i> documents and discusses my creative output over the course of six months at Washington University in St. Louis. 
+        <br><br>Each book synthesizes traditional methods of process documentation with relevant essays and ruminations. The result is an intimate but robust reflection on learning in the institutional sphere.</div>
+        <div class="images"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6714-copy.jpg"></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">The Spirit Molecule</div>
     <div class="description">A microsite about psychedelics</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="spiritmolecule/spirit-molecule-01.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
+    <div class="thumbnails"><img src="spiritmolecule/spirit-molecule-02.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>The Spirit Molecule</i> is a microsite exploring the debate around natural psychedelics.
+        <br><br>Built to emulate the sensation of tripping, <i>The Spirit Molecule</i> employs a series of variables and algorithms to create a dynamic, ever-changing environment and make each page visit a unique experience.</div>
+        <div class="images"><img src="spiritmolecule/spirit-molecule-02.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Reconna Typeface</div>
     <div class="description">A typeface inspired by 19th-century print</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="reconna/IMG_1234-2.jpg"><img src="reconna/reconna screenie.png"></div>
+    <div class="thumbnails"><img src="reconna/IMG_1234-2.jpg"><img src="reconna/IMG_1237-2.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Reconna</i> is a prototype inspired letterforms by found in 20th-century Italian print archives. The condensed serif has high ascenders and angled serifs. 
+        <br><br>Glyph set includes numerals, basic punctuation, and a variety of symbols.</div>
+        <div class="images"><img src="reconna/IMG_1234-2.jpg"><img src="reconna/IMG_1237-2.jpg"></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Found Soundscapes</div>
     <div class="description">Phonetic poetry from the streets of Florence</div>
     <div class="year">2019</div>
     <div class="thumbnails"><img src="soundscapes/IMG_1099.jpg"><img src="soundscapes/IMG_1090.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Found Soundscapes</i>  is a zine of phonetic poetry inspired by the streets of Florence. Each poem represents the sonic landscape of a different location in the city.
+        <br><br>The zine features found typography collected on site using the process of Frottage.</div>
+        <div class="images"><img src="soundscapes/IMG_1099.jpg"><img src="soundscapes/IMG_1090.jpg"></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Nike: Discover Your Air</div>
     <div class="description">A '90s-infused ad campaign</div>
     <div class="year">2018</div>
     <div class="thumbnails"><img src="discoveryourair/Product-Shot.jpg"><img src="discoveryourair/Bumper-Sticker.jpg"><img src="discoveryourair/Foot-Locker---Cab.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Discover Your Air</i>  is a '90s-infused campaign promoting a series of sneaker drops for Nike and Foot Locker.
+        <br><br>As a creative intern at Bullish, Inc., I worked on art direction, graphic design, and copywriting for deliverables including a game show hosted by iconic rapper Fat Joe</div>
+        <div class="images"><img src="discoveryourair/Bumper-Sticker.jpg"></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Save Local Booksellers</div>
@@ -136,7 +167,7 @@
     <img src="/assets/headshot.jpg">    
 </section>
     
-    <section class="bottom sticky">
+    <section class="bottom sticky" style="display:none;">
     <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
     <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     <a class="flip" href="assets/Mikki_Janower_Resume.pdf" target="_blank">Resume</a>
