reorganized all js files
divided by section, eg. homepage, project, index, and universal; deleted unnecessary functions and lines of code

--- a/cyberotica.html
+++ b/cyberotica.html
@@ -17,7 +17,7 @@
     <section class="top sticky">
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">Cyberotica</a>
+    <a class="projectTitle" style = "transform:rotateY(90deg)">Cyberotica</a>
     <a class="flip index">Index</a>
     </section>
 
@@ -96,9 +96,9 @@
     </section>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/gallery.js"></script>
-    <script src="js/pageturn.js"></script>
+    <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
 
 
