--- a/project-index.html
+++ b/project-index.html
@@ -21,12 +21,12 @@
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="flip about">About</a>
-    <a href="index.html" class="flip finishedindex">Back</a>
+    <a href="index.html" class="flip fullindex">Back</a>
     </section>
 
-    <div class="querytown"></div>
+   <!-- <div class="querytown"></div>-->
 <!--------------------------insert page-specific information in this section ONLY----------------------->
-<section id="projectindex">
+<section id="fullindex">
 <div class="listing">
     <div class="title">Cyberotica</div>
     <div class="description">An anthology of contemporary art</div>
@@ -144,18 +144,6 @@
     <div class="year">2019</div>
     <div class="thumbnails"><img src="miniprojects/miatm/miatm-01.png"><img src="miniprojects/miatm/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
 </div>
-<!--<div class="listing">
-    <div class="title">Armour Magazine</div>
-    <div class="description">Creative direction, etc.</div>
-    <div class="year">2016-2020</div>
-    <div class="thumbnails"><img src="miniprojects/miatm/miatm-01.png"><img src="miniprojects/miatm/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
-</div>
-<div class="listing">
-    <div class="title">Gold and Granary</div>
-    <div class="description">Branding for an independent print fair</div>
-    <div class="year">2019</div>
-    <div class="thumbnails"></div>
-</div>-->
 <div class="more">
    Looking for something? More projects available upon request — email <a href = "mailto:mikki@janower.net">mikki@janower.net</a> :) 
 </div>
@@ -167,7 +155,7 @@
     <img src="/assets/headshot.jpg">    
 </section>
     
-    <section class="bottom sticky" style="display:none;">
+    <section class="indexbottom sticky" style="display:none;">
     <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
     <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     <a class="flip" href="assets/Mikki_Janower_Resume.pdf" target="_blank">Resume</a>
@@ -178,8 +166,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
     <script src="js/index.js"></script>
-    <script src="js/pageturn.js"></script>
-    <script src="js/projects.js"></script>
+    <script src="js/universal.js"></script>
 
 
 </body>
