--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p><mark>This page is under construction. In the meantime, more recent projects available upon request :)</mark></p>
         </section>
     
-<section id="homepage"style="display:none">
+<section id="homepage">
     <div class="pic cyberotica">
         <img src="cyberotica/factoryofthesun2.jpg">
          <div id="label"><span class="labelita">Cyberotica</span><span class="		 			labelreg">2020</span></div>
@@ -69,7 +69,7 @@
 </section>
 
 <section class="dragTitle" style="display:none;"></section>
-<section class="bottom sticky">
+<section class="indexbottom bottom sticky">
     <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
     <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     <a class="flip" href="assets/Mikki_Janower_Resume.pdf" target="_blank">Resume</a>
@@ -81,8 +81,8 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
-    <script src="js/gallery.js"></script>
-    <script src="js/pageturn.js"></script>
+    <script src="js/homepage.js"></script>
+    <script src="js/universal.js"></script>
 
 </body>
 
