--- a/postcursor.html
+++ b/postcursor.html
@@ -77,8 +77,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/gallery.js"></script>
-    <script src="js/pageturn.js"></script>
+    <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
 
 
