--- a/project-index.html
+++ b/project-index.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" type="image/png" href="assets/bigfavicon.png"/>
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="css/index.css">
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
@@ -24,7 +23,7 @@
     <a href="index.html" class="flip fullindex">Back</a>
     </section>
 
-   <!-- <div class="querytown"></div>-->
+  <!-- <div class="querytown"></div>--> 
 <!--------------------------insert page-specific information in this section ONLY----------------------->
 <section id="fullindex">
 <div class="listing">
@@ -33,7 +32,7 @@
     <div class="year">2020</div>
     <div class="thumbnails"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"><img src="cyberotica/contents2.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
-        <br> <br>Spanning gender politics, de-colonization, and techno-utopianism, Cyberotica presents a vast narrative of identity and protest.</div>
+       <br><br>Spanning gender politics, de-colonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
         <div class="images"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"></div>
     </div>
 </div>
