possibly fixing scroll issue

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow:scroll;">
 
 <head>
     <title>Mikki Janower dot Work</title>
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
+
 
 </head>
 <body>
-    <section class="top sticky">
+    <section class="top">
     <a class="name">Mikki Janower <span class="dot"> dot</span> Work</a>
     <a class="flip about">About</a>
     <a class="flip index">Index</a>
@@ -29,7 +29,7 @@
     <img src="assets/headshot.jpg">    
 </section>
 
-    <section id="index">
+    <section id="index" style="display:none;">
         <img src="assets/scaffolding.jpg">
         <p><mark>This page is under construction. In the meantime, more recent projects available upon request :)</mark></p>
         </section>
@@ -71,7 +71,7 @@
 </section>
 
 <section class="dragTitle" style="display:none;"></section>
-<section class="indexbottom bottom sticky">
+<section class="bottom">
     <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
     <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     <a class="flip" href="assets/Mikki_Janower_Resume.pdf" target="_blank">Resume</a>
@@ -80,9 +80,9 @@
     </section>
 
     <script src="assets/jquery.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
+
     <script src="js/homepage.js"></script>
     <script src="js/universal.js"></script>
 
