--- a/project-index.html
+++ b/project-index.html
@@ -34,6 +34,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
        <br><br>Spanning gender politics, de-colonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
         <div class="images"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"></div>
+        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
     </div>
 </div>
 
@@ -45,6 +46,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Postcursor</i> and <i>Starrynite</i> are microsites trained to generate graphics according to users’ hand movements, exploring the notion of process-as-product.
         <br><br>Each site uses the same machine learning model to its own end. Postcursor lets users draw cursors across the screen, while Starrynite leaves a trail of stars across the user's backdrop.</div>
         <div class="images"><img src="postcursor/postcursor-02.png"><img src="postcursor/postcursor-04.png"></div>
+        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
     </div>
 </div>
 <div class="listing">
@@ -61,6 +63,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Cocktails of the Major Arcana</i> is a collection of cocktail recipes inspired by the art of tarot.
         <br><br>Each hand-drawn illustration represents one character in the tarot pantheon. On the backside of each card, a curated cocktail represents the corresponding character.</div>
         <div class="images"><img src="majorarcana/IMG_2527-copy.jpg"><img src="majorarcana/IMG_2446-copy.jpg"></div>
+        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
     </div>
 </div>
 <div class="listing">
@@ -71,6 +74,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Reflections on Practice</i> documents and discusses my creative output over the course of six months at Washington University in St. Louis. 
         <br><br>Each book synthesizes traditional methods of process documentation with relevant essays and ruminations. The result is an intimate but robust reflection on learning in the institutional sphere.</div>
         <div class="images"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6714-copy.jpg"></div>
+        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
     </div>
 </div>
 <div class="listing">
@@ -81,6 +85,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>The Spirit Molecule</i> is a microsite exploring the debate around natural psychedelics.
         <br><br>Built to emulate the sensation of tripping, <i>The Spirit Molecule</i> employs a series of variables and algorithms to create a dynamic, ever-changing environment and make each page visit a unique experience.</div>
         <div class="images"><img src="spiritmolecule/spirit-molecule-02.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
+        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
     </div>
 </div>
 <div class="listing">
@@ -91,6 +96,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Reconna</i> is a prototype inspired letterforms by found in 20th-century Italian print archives. The condensed serif has high ascenders and angled serifs. 
         <br><br>Glyph set includes numerals, basic punctuation, and a variety of symbols.</div>
         <div class="images"><img src="reconna/IMG_1234-2.jpg"><img src="reconna/IMG_1237-2.jpg"></div>
+        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
     </div>
 </div>
 <div class="listing">
@@ -101,6 +107,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Found Soundscapes</i>  is a zine of phonetic poetry inspired by the streets of Florence. Each poem represents the sonic landscape of a different location in the city.
         <br><br>The zine features found typography collected on site using the process of Frottage.</div>
         <div class="images"><img src="soundscapes/IMG_1099.jpg"><img src="soundscapes/IMG_1090.jpg"></div>
+        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
     </div>
 </div>
 <div class="listing">
@@ -111,6 +118,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Discover Your Air</i>  is a '90s-infused campaign promoting a series of sneaker drops for Nike and Foot Locker.
         <br><br>As a creative intern at Bullish, Inc., I worked on art direction, graphic design, and copywriting for deliverables including a game show hosted by iconic rapper Fat Joe</div>
         <div class="images"><img src="discoveryourair/Bumper-Sticker.jpg"></div>
+        <div class="buttons"><a>Read More >></a></div>
     </div>
 </div>
 <div class="listing">
