INDEX PAGE WENT LIVE

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <img src="assets/headshot.jpg">    
 </section>
 
-    <section id="index" style="display:none;">
+   <!-- <section id="index" style="display:none;">
         <img src="assets/scaffolding.jpg">
         <p><mark>This page is under construction. In the meantime, more recent projects available upon request :)</mark></p>
-        </section>
+        </section> -->
     
 <section id="homepage">
     <div class="pic cyberotica">
