--- a/project-index.html
+++ b/project-index.html
@@ -34,7 +34,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
        <br><br>Spanning gender politics, de-colonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
         <div class="images"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"></div>
-        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
+        <div class="buttons"><a href="cyberotica.html">Read More>></a><a href="https://www.instagram.com/p/B_iAwJIBc3G/" target="_blank">Instagram>></a></div>
     </div>
 </div>
 
@@ -46,14 +46,19 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Postcursor</i> and <i>Starrynite</i> are microsites trained to generate graphics according to users’ hand movements, exploring the notion of process-as-product.
         <br><br>Each site uses the same machine learning model to its own end. Postcursor lets users draw cursors across the screen, while Starrynite leaves a trail of stars across the user's backdrop.</div>
         <div class="images"><img src="postcursor/postcursor-02.png"><img src="postcursor/postcursor-04.png"></div>
-        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
+        <div class="buttons"><a href="postcursor.html">Read More>></a><a href="https://www.instagram.com/p/B_vb9tahASX/">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
-    <div class="title">Brett Castro: a/B Parts I-V</div>
+    <div class="title">Brett Castro: a/B</div>
     <div class="description">An album art series</div>
     <div class="year">2020-ongoing</div>
     <div class="thumbnails"><img src="miniprojects/aB/p1.jpg"><img src="miniprojects/aB/p2.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words">a/B is a series of five A-side/B-side EPs by musician Brett Castro. Each offers a resonant glimpse into the artist's psyche: his past, his present, and his hopes for the future.
+        <br><br>Each album artwork in the five-part series features intimate moments in the artist’s life by way of family photographs and sketches by his mother.</div>
+        <div class="images"><img src="miniprojects/aB/p1.jpg"><img src="miniprojects/aB/p2.jpg"></div>
+        <div class="buttons"><a href="https://www.instagram.com/p/CATSIrpB042/" target="_blank">Instagram>></a><a href="https://open.spotify.com/album/7vnNR4n2fxfYmZdVnwZ1OX?si=M6hReyxiS9O5oQNi7bm2eA">Listen on Spotify>></a></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Cocktails of the Major Arcana</div>
@@ -63,7 +68,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Cocktails of the Major Arcana</i> is a collection of cocktail recipes inspired by the art of tarot.
         <br><br>Each hand-drawn illustration represents one character in the tarot pantheon. On the backside of each card, a curated cocktail represents the corresponding character.</div>
         <div class="images"><img src="majorarcana/IMG_2527-copy.jpg"><img src="majorarcana/IMG_2446-copy.jpg"></div>
-        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
+        <div class="buttons"><a href="majorarcana.html">Read More>></a><a target="_blank" href="https://www.instagram.com/p/B3aQOOEBF-N/">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -74,7 +79,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Reflections on Practice</i> documents and discusses my creative output over the course of six months at Washington University in St. Louis. 
         <br><br>Each book synthesizes traditional methods of process documentation with relevant essays and ruminations. The result is an intimate but robust reflection on learning in the institutional sphere.</div>
         <div class="images"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6714-copy.jpg"></div>
-        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
+        <div class="buttons"><a href="reflections.html">Read More>></a><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -85,7 +90,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>The Spirit Molecule</i> is a microsite exploring the debate around natural psychedelics.
         <br><br>Built to emulate the sensation of tripping, <i>The Spirit Molecule</i> employs a series of variables and algorithms to create a dynamic, ever-changing environment and make each page visit a unique experience.</div>
         <div class="images"><img src="spiritmolecule/spirit-molecule-02.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
-        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
+        <div class="buttons"><a href="spiritmolecule.html">Read More>></a><a href="https://www.instagram.com/p/B8mjL2AhyUJ/" target="_blank">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -96,7 +101,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Reconna</i> is a prototype inspired letterforms by found in 20th-century Italian print archives. The condensed serif has high ascenders and angled serifs. 
         <br><br>Glyph set includes numerals, basic punctuation, and a variety of symbols.</div>
         <div class="images"><img src="reconna/IMG_1234-2.jpg"><img src="reconna/IMG_1237-2.jpg"></div>
-        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
+        <div class="buttons"><a href="reconnatypeface.html">Read More>></a><a target="_blank" href="https://www.instagram.com/p/BxCsuQ7lw7M/">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -107,7 +112,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Found Soundscapes</i>  is a zine of phonetic poetry inspired by the streets of Florence. Each poem represents the sonic landscape of a different location in the city.
         <br><br>The zine features found typography collected on site using the process of Frottage.</div>
         <div class="images"><img src="soundscapes/IMG_1099.jpg"><img src="soundscapes/IMG_1090.jpg"></div>
-        <div class="buttons"><a>Read More >></a><a>Instagram >></a></div>
+        <div class="buttons"><a href="foundsoundscapes.html">Read More>></a><a target="_blank" href="https://www.instagram.com/p/BwpVLyuBNFi/">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -118,7 +123,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Discover Your Air</i>  is a '90s-infused campaign promoting a series of sneaker drops for Nike and Foot Locker.
         <br><br>As a creative intern at Bullish, Inc., I worked on art direction, graphic design, and copywriting for deliverables including a game show hosted by iconic rapper Fat Joe</div>
         <div class="images"><img src="discoveryourair/Bumper-Sticker.jpg"></div>
-        <div class="buttons"><a>Read More >></a></div>
+        <div class="buttons"><a href="discoveryourair.html">Read More>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -126,33 +131,58 @@
     <div class="description">On supporting independent bookstores</div>
     <div class="year">2019</div>
     <div class="thumbnails"><img src="miniprojects/booksellers/poster.png"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Save Local Booksellers</i> lists easy ways to support small bookstores and independent publishers.
+        <br><br>The poster will be adapted into a tee shirt and 100% of proceeds will go to Unnameable Books in Prospect Heights, Brooklyn.</div>
+        <div class="images"><img src="miniprojects/booksellers/poster.png"></div>
+        <div class="buttons"><a href="https://www.instagram.com/p/B_7mjGmBFlf/">Instagram>></a></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Super Mario Void</div>
     <div class="description">A video game for nihilists</div>
     <div class="year">2019</div>
     <div class="thumbnails"><img src="miniprojects/mariovoid/thumbnail.png"></div>
+    <div class="extender" style="display:none;"> <div class="words">Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out.
+        <br><br>This game is unaffiliated with the Super Mario Bros franchise and all too relevant to our interminable, meaningless existence.</div>
+        <div class="images"><img src="miniprojects/mariovoid/thumbnail.png"></div>
+        <div class="buttons"><a target="_blank" href="https://mjanower.github.io/supermariovoid/">Play in vain>></a></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Everpress: T-shirt series</div>
     <div class="description">An ongoing quest for sartorial excellence</div>
     <div class="year">2020—ongoing</div>
     <div class="thumbnails"><img src="miniprojects/everpress/powerstee.png"><img src="miniprojects/everpress/stemtee.png"><img src="miniprojects/everpress/voidtee.png"></div>
+    <div class="extender" style="display:none;"> <div class="words">What began as a one-off merch campaign became an ongoing side hustle.
+        <br><br>Most recently, I collaborated with the Everpress team on a tee shirt design for which 100% of proceeds benefit Food Bank NYC. More designs coming soon ;)</div>
+        <div class="images"><img src="miniprojects/everpress/powerstee.png"><img src="miniprojects/everpress/stemtee.png"></div>
+        <div class="buttons"><a target="_blank" href="https://everpress.com/blog/our-21-favourite-t-shirt-designs-summer/">Everpress>></a></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Tenets for Anarchic Design</div>
     <div class="description">Instructions for radical practice</div>
     <div class="year">2019</div>
     <div class="thumbnails"><img src="miniprojects/anarchic/poster.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Tenets of Anarchic Design</i> (an oxymoron) offers a set of loose guidelines for a design ethos that rejects the boundaries we recognize today and proposes an outspoken, decolonized practice.
+        <br><br>Inspired by <a href="https://www.are.na/liminism/liminism">this Are.na channel,</a> and also by <a href = "https://www.are.na/devin/towards-a-marxist-design-practice">this one.</a></div>
+        <div class="images"><img src="miniprojects/anarchic/poster.jpg"></div>
+        <div class="buttons"><a target="_blank" href="https://www.instagram.com/p/B74DGN9B2Gj/">Instagram>></a></div>
+    </div>
 </div>
 <div class="listing">
     <div class="title">Mikki is Addicted to Magazines</div>
     <div class="description">A microsite about...you know.</div>
     <div class="year">2019</div>
     <div class="thumbnails"><img src="miniprojects/miatm/miatm-01.png"><img src="miniprojects/miatm/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Mikki is Addicted to Magazines</i> is a showreel for independent magazines and an exercise in scroll events.
+        <br><br>The site features 3D animations of my favorite magazines as well as a detailed index of each volume.</div>
+        <div class="images"><img src="miniprojects/miatm/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
+        <div class="buttons"><a href="https://www.instagram.com/p/B4k9WSeh2E6/" target="_blank">See the site in action>></a></div>
+    </div>
 </div>
 <div class="more">
-   Looking for something? More projects available upon request — email <a href = "mailto:mikki@janower.net">mikki@janower.net</a> :) 
+   Looking for something? More available upon request — email <a href = "mailto:mikki@janower.net">mikki@janower.net</a> :) 
 </div>
 </section>  
 
