--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
 
-    <script src="js/homepage.js"></script>
-    <script src="js/universal.js"></script>
+    <script src="js/homepage.min.js"></script>
+    <script src="js/universal.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/imagemin-instant@1.0.4/index.min.js"></script>
 
 </body>
 
