--- a/postcursor.html
+++ b/postcursor.html
@@ -73,8 +73,8 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/universal.js"></script>
-    <script src="js/projects.js"></script>
+    <script src="js/universal.min.js"></script>
+    <script src="js/projects.min.js"></script>
 
 
 </body>
