--- a/project-index.html
+++ b/project-index.html
@@ -20,12 +20,12 @@
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="flip about">About</a>
-    <a href="index.html" class="flip fullindex">Back</a>
+    <a href="index.html" class="flip back">Back</a>
     </section>
 
   <!-- <div class="querytown"></div>--> 
 <!--------------------------insert page-specific information in this section ONLY----------------------->
-<section id="fullindex">
+<section id="fullindex" style="display:none;">
 <div class="listing">
     <div class="title">Cyberotica</div>
     <div class="description">An anthology of contemporary art</div>
@@ -202,8 +202,9 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/universal.js"></script>
+    <script src="js/index.min.js"></script>
+    <script src="js/universal.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/imagemin-instant@1.0.4/index.min.js"></script>
 
 
 </body>
