--- a/majorarcana.html
+++ b/majorarcana.html
@@ -69,9 +69,9 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
-    <script src="assets/jquery.min.js"></script>
-    <script src="js/universal.min.js"></script>
-    <script src="js/projects.min.js"></script>
+    <script src="assets/jquery.minjs"></script>
+    <script src="js/universal.js"></script>
+    <script src="js/projects.js"></script>
 
 
 </body>
