--- a/project-index.html
+++ b/project-index.html
@@ -202,8 +202,8 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
-    <script src="js/index.min.js"></script>
-    <script src="js/universal.min.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/universal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/imagemin-instant@1.0.4/index.min.js"></script>
 
 
