--- a/project-index.html
+++ b/project-index.html
@@ -185,6 +185,11 @@
    Looking for something? More available upon request — email <a href = "mailto:mikki@janower.net">mikki@janower.net</a> :) 
 </div>
 </section>  
+<style>
+    .extender img {
+        height: auto !important;
+    }
+    </style>
 
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section id="about" style="display:none;">
