--- a/cyberotica.html
+++ b/cyberotica.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <!--    <div class="querytown"></div>--->
     <section class="top sticky">
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
