--- a/majorarcana.html
+++ b/majorarcana.html
@@ -67,11 +67,13 @@
     <a class="flip" href="https://linkedin.com/in/mtjanower" target="_blank">LinkedIn</a>
     </section>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
-    <script src="assets/jquery.minjs"></script>
+    <script src="assets/jquery.min.js"></script>
     <script src="js/universal.js"></script>
     <script src="js/projects.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/draggable/1.0.0-beta.9/draggable.min.js"></script>
+
 
 
 </body>
