--- a/project-index.html
+++ b/project-index.html
@@ -22,6 +22,7 @@
     <a class="flip about">About</a>
     <a href="index.html" class="flip back">Back</a>
     </section>
+   <!-- <div id="loader">Loading...<span>|</span</div>-->
 
   <!-- <div class="querytown"></div>--> 
 <!--------------------------insert page-specific information in this section ONLY----------------------->
