fixed polyptych styling issues

--- a/project-index.html
+++ b/project-index.html
@@ -22,7 +22,7 @@
     <a class="flip about">About</a>
     <a href="index.html" class="flip back">Back</a>
     </section>
-   <!-- <div id="loader">Loading...<span>|</span</div>-->
+   <div id="loader"><img src="assets/loader-02.png"></div>
 
   <!-- <div class="querytown"></div>--> 
 <!--------------------------insert page-specific information in this section ONLY----------------------->
@@ -210,7 +210,7 @@
     <script src="assets/jquery.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/universal.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/imagemin-instant@1.0.4/index.min.js"></script>
+  <!---  <script src="https://cdn.jsdelivr.net/npm/imagemin-instant@1.0.4/index.min.js"></script>--->
 
 
 </body>
