ditched loader for now

--- a/project-index.html
+++ b/project-index.html
@@ -22,7 +22,7 @@
     <a class="flip about">About</a>
     <a href="index.html" class="flip back">Back</a>
     </section>
-   <div id="loader"><img src="assets/loader-02.png"></div>
+ <!---  <div id="loader"><img src="assets/loader-02.png"></div> -->
 
   <!-- <div class="querytown"></div>--> 
 <!--------------------------insert page-specific information in this section ONLY----------------------->
