adding thumbnails to speed load time on index

--- a/project-index.html
+++ b/project-index.html
@@ -31,7 +31,7 @@
     <div class="title">Cyberotica</div>
     <div class="description">An anthology of contemporary art</div>
     <div class="year">2020</div>
-    <div class="thumbnails"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"><img src="cyberotica/contents2.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/factoryofthesun2.jpg"><img src="thumbnails/factoryofthesun.jpg"><img src="thumbnails/contents2.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
        <br><br>Spanning gender politics, de-colonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
         <div class="images"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"></div>
@@ -43,7 +43,7 @@
     <div class="title">Postcursor / Starrynite</div>
     <div class="description">Machine learning as conditional design</div>
     <div class="year">2020</div>
-    <div class="thumbnails"><img src="postcursor/postcursor-02.png"><img src="postcursor/postcursor-04.png"></div>
+    <div class="thumbnails"><img src="thumbnails/postcursor-02.png"><img src="thumbnails/postcursor-04.png"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Postcursor</i> and <i>Starrynite</i> are microsites trained to generate graphics according to users’ hand movements, exploring the notion of process-as-product.
         <br><br>Each site uses the same machine learning model to its own end. Postcursor lets users draw cursors across the screen, while Starrynite leaves a trail of stars across the user's backdrop.</div>
         <div class="images"><img src="postcursor/postcursor-02.png"><img src="postcursor/postcursor-04.png"></div>
@@ -54,7 +54,7 @@
     <div class="title">Brett Castro: a/B</div>
     <div class="description">An album art series</div>
     <div class="year">2020-ongoing</div>
-    <div class="thumbnails"><img src="miniprojects/aB/p1.jpg"><img src="miniprojects/aB/p2.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/p1.jpg"><img src="thumbnails/p2.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words">a/B is a series of five A-side/B-side EPs by musician Brett Castro. Each offers a resonant glimpse into the artist's psyche: his past, his present, and his hopes for the future.
         <br><br>Each album artwork in the five-part series features intimate moments in the artist’s life by way of family photographs and sketches by his mother.</div>
         <div class="images"><img src="miniprojects/aB/p1.jpg"><img src="miniprojects/aB/p2.jpg"></div>
@@ -65,7 +65,7 @@
     <div class="title">Cocktails of the Major Arcana</div>
     <div class="description">Mixology for pagans</div>
     <div class="year">2020</div>
-    <div class="thumbnails"><img src="majorarcana/IMG_2527-copy.jpg"><img src="majorarcana/IMG_2446-copy.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/IMG_2527-copy.jpg"><img src="thumbnails/IMG_2446-copy.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Cocktails of the Major Arcana</i> is a collection of cocktail recipes inspired by the art of tarot.
         <br><br>Each hand-drawn illustration represents one character in the tarot pantheon. On the backside of each card, a curated cocktail represents the corresponding character.</div>
         <div class="images"><img src="majorarcana/IMG_2527-copy.jpg"><img src="majorarcana/IMG_2446-copy.jpg"></div>
@@ -76,7 +76,7 @@
     <div class="title">Reflections on Practice</div>
     <div class="description">Not a process book</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6714-copy.jpg"><img src="reflections/IMG_6772.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/IMG_6544-copy.jpg"><img src="thumbnails/IMG_6714-copy.jpg"><img src="reflections/IMG_6772.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Reflections on Practice</i> documents and discusses my creative output over the course of six months at Washington University in St. Louis. 
         <br><br>Each book synthesizes traditional methods of process documentation with relevant essays and ruminations. The result is an intimate but robust reflection on learning in the institutional sphere.</div>
         <div class="images"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6714-copy.jpg"></div>
@@ -87,7 +87,7 @@
     <div class="title">The Spirit Molecule</div>
     <div class="description">A microsite about psychedelics</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="spiritmolecule/spirit-molecule-02.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
+    <div class="thumbnails"><img src="thumbnails/spirit-molecule-02.png"><img src="thumbnails/spirit-molecule-04.png"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>The Spirit Molecule</i> is a microsite exploring the debate around natural psychedelics.
         <br><br>Built to emulate the sensation of tripping, <i>The Spirit Molecule</i> employs a series of variables and algorithms to create a dynamic, ever-changing environment and make each page visit a unique experience.</div>
         <div class="images"><img src="spiritmolecule/spirit-molecule-02.png"><img src="spiritmolecule/spirit-molecule-04.png"></div>
@@ -98,7 +98,7 @@
     <div class="title">Reconna Typeface</div>
     <div class="description">A typeface inspired by 19th-century print</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="reconna/IMG_1234-2.jpg"><img src="reconna/IMG_1237-2.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/IMG_1234-2.jpg"><img src="thumbnails/IMG_1237-2.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Reconna</i> is a prototype inspired letterforms by found in 20th-century Italian print archives. The condensed serif has high ascenders and angled serifs. 
         <br><br>Glyph set includes numerals, basic punctuation, and a variety of symbols.</div>
         <div class="images"><img src="reconna/IMG_1234-2.jpg"><img src="reconna/IMG_1237-2.jpg"></div>
@@ -109,7 +109,7 @@
     <div class="title">Found Soundscapes</div>
     <div class="description">Phonetic poetry from the streets of Florence</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="soundscapes/IMG_1099.jpg"><img src="soundscapes/IMG_1090.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/IMG_1099.jpg"><img src="thumbnails/IMG_1090.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Found Soundscapes</i>  is a zine of phonetic poetry inspired by the streets of Florence. Each poem represents the sonic landscape of a different location in the city.
         <br><br>The zine features found typography collected on site using the process of Frottage.</div>
         <div class="images"><img src="soundscapes/IMG_1099.jpg"><img src="soundscapes/IMG_1090.jpg"></div>
@@ -120,7 +120,7 @@
     <div class="title">Nike: Discover Your Air</div>
     <div class="description">A '90s-infused ad campaign</div>
     <div class="year">2018</div>
-    <div class="thumbnails"><img src="discoveryourair/Product-Shot.jpg"><img src="discoveryourair/Bumper-Sticker.jpg"><img src="discoveryourair/Foot-Locker---Cab.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/Product-Shot.jpg"><img src="thumbnails/Bumper-Sticker.jpg"><img src="thumbnails/Foot-Locker---Cab.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Discover Your Air</i>  is a '90s-infused campaign promoting a series of sneaker drops for Nike and Foot Locker.
         <br><br>As a creative intern at Bullish, Inc., I worked on art direction, graphic design, and copywriting for deliverables including a game show hosted by iconic rapper Fat Joe</div>
         <div class="images"><img src="discoveryourair/Bumper-Sticker.jpg"></div>
@@ -131,7 +131,7 @@
     <div class="title">Save Local Booksellers</div>
     <div class="description">On supporting independent bookstores</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="miniprojects/booksellers/poster.png"></div>
+    <div class="thumbnails"><img src="thumbnails/poster.png"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Save Local Booksellers</i> lists easy ways to support small bookstores and independent publishers.
         <br><br>The poster will be adapted into a tee shirt and 100% of proceeds will go to Unnameable Books in Prospect Heights, Brooklyn.</div>
         <div class="images"><img src="miniprojects/booksellers/poster.png"></div>
@@ -142,7 +142,7 @@
     <div class="title">Super Mario Void</div>
     <div class="description">A video game for nihilists</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="miniprojects/mariovoid/thumbnail.png"></div>
+    <div class="thumbnails"><img src="thumbnails/thumbnail.png"></div>
     <div class="extender" style="display:none;"> <div class="words">Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out.
         <br><br>This game is unaffiliated with the Super Mario Bros franchise and all too relevant to our interminable, meaningless existence.</div>
         <div class="images"><img src="miniprojects/mariovoid/thumbnail.png"></div>
@@ -153,7 +153,7 @@
     <div class="title">Everpress: T-shirt series</div>
     <div class="description">An ongoing quest for sartorial excellence</div>
     <div class="year">2020—ongoing</div>
-    <div class="thumbnails"><img src="miniprojects/everpress/powerstee.png"><img src="miniprojects/everpress/stemtee.png"><img src="miniprojects/everpress/voidtee.png"></div>
+    <div class="thumbnails"><img src="thumbnails/powerstee.png"><img src="thumbnails/stemtee.png"><img src="miniprojects/everpress/voidtee.png"></div>
     <div class="extender" style="display:none;"> <div class="words">What began as a one-off merch campaign became an ongoing side hustle.
         <br><br>Most recently, I collaborated with the Everpress team on a tee shirt design for which 100% of proceeds benefit Food Bank NYC. More designs coming soon ;)</div>
         <div class="images"><img src="miniprojects/everpress/powerstee.png"><img src="miniprojects/everpress/stemtee.png"></div>
@@ -164,7 +164,7 @@
     <div class="title">Tenets for Anarchic Design</div>
     <div class="description">Instructions for radical practice</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="miniprojects/anarchic/poster.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/anarchic/poster.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Tenets of Anarchic Design</i> (an oxymoron) offers a set of loose guidelines for a design ethos that rejects the boundaries we recognize today and proposes an outspoken, decolonized practice.
         <br><br>Inspired by <a href="https://www.are.na/liminism/liminism">this Are.na channel,</a> and also by <a href = "https://www.are.na/devin/towards-a-marxist-design-practice">this one.</a></div>
         <div class="images"><img src="miniprojects/anarchic/poster.jpg"></div>
@@ -175,7 +175,7 @@
     <div class="title">Mikki is Addicted to Magazines</div>
     <div class="description">A microsite about...you know.</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="miniprojects/miatm/miatm-01.png"><img src="miniprojects/miatm/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
+    <div class="thumbnails"><img src="thumbnails/miatm-01.png"><img src="thumbnails/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Mikki is Addicted to Magazines</i> is a showreel for independent magazines and an exercise in scroll events.
         <br><br>The site features 3D animations of my favorite magazines as well as a detailed index of each volume.</div>
         <div class="images"><img src="miniprojects/miatm/miatm-04.png"><img src="miniprojects/miatm/miatm-05.png"></div>
