new mariovoid link

--- a/project-index.html
+++ b/project-index.html
@@ -146,7 +146,7 @@
     <div class="extender" style="display:none;"> <div class="words">Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out.
         <br><br>This game is unaffiliated with the Super Mario Bros franchise and all too relevant to our interminable, meaningless existence.</div>
         <div class="images"><img src="miniprojects/mariovoid/thumbnail.png"></div>
-        <div class="buttons"><a target="_blank" href="https://mjanower.github.io/supermariovoid/">Play in vain>></a></div>
+        <div class="buttons"><a target="_blank" href="https://mikki-janower.github.io/supermariovoid/">Play in vain>></a></div>
     </div>
 </div>
 <div class="listing">
