--- a/project-index.html
+++ b/project-index.html
@@ -146,7 +146,7 @@
     <div class="extender" style="display:none;"> <div class="words">Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out.
         <br><br>This game is unaffiliated with the Super Mario Bros franchise and all too relevant to our interminable, meaningless existence.</div>
         <div class="images"><img src="miniprojects/mariovoid/thumbnail.png"></div>
-        <div class="buttons"><a target="_blank" href="https://mikki-janower.github.io/supermariovoid/">Play in vain>></a></div>
+        <div class="buttons"><a href="https://mikki-janower.github.io/supermariovoid/" target="_blank">Play in vain>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -164,7 +164,7 @@
     <div class="title">Tenets for Anarchic Design</div>
     <div class="description">Instructions for radical practice</div>
     <div class="year">2019</div>
-    <div class="thumbnails"><img src="thumbnails/anarchic/poster.jpg"></div>
+    <div class="thumbnails"><img src="thumbnails/poster.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Tenets of Anarchic Design</i> (an oxymoron) offers a set of loose guidelines for a design ethos that rejects the boundaries we recognize today and proposes an outspoken, decolonized practice.
         <br><br>Inspired by <a href="https://www.are.na/liminism/liminism">this Are.na channel,</a> and also by <a href = "https://www.are.na/devin/towards-a-marxist-design-practice">this one.</a></div>
         <div class="images"><img src="miniprojects/anarchic/poster.jpg"></div>
