--- a/project-index.html
+++ b/project-index.html
@@ -34,7 +34,7 @@
     <div class="thumbnails"><img src="thumbnails/factoryofthesun2.jpg"><img src="thumbnails/factoryofthesun.jpg"><img src="thumbnails/contents2.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
        <br><br>Spanning gender politics, de-colonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
-        <div class="images"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/factoryofthesun.jpg"></div>
+        <div class="images"><img src="cyberotica/factoryofthesun2.jpg"><img src="cyberotica/koolaidman1.jpg"></div>
         <div class="buttons"><a href="cyberotica.html">Read More>></a><a href="https://www.instagram.com/p/B_iAwJIBc3G/" target="_blank">Instagram>></a></div>
     </div>
 </div>
